[package]
name = "sumcheck"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ff = "0.4.2"
ark-poly = "0.4.2"
ark-crypto-primitives = { version = "0.4.0", features = ["sponge"] }
ark-std = { version = "0.4.0", features = ["getrandom"] }
ark-bls12-381 = "0.4"
rand = "0.8.5"
rand_chacha = "0.3.1"
