[package]
name = "sumcheck"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ff = "0.4.2"
ark-poly = "0.4.2"
ark-crypto-primitives = { version = "0.4.0", features = ["sponge"] }
ark-std = { version = "0.4.0", features = ["getrandom"] }
ark-bls12-381 = "0.4"
rand = "0.8.5"
rand_chacha = "0.3.1"
poseidon-native = { git = "https://github.com/scroll-tech/poseidon/", package = "poseidon" }
halo2-base = { git = "https://github.com/axiom-crypto/halo2-lib", branch = "community-edition" }
ark-bn254 = "0.4.0"